defined basic wrapper structure

--- a/widgets/wheather-index.html
+++ b/widgets/wheather-index.html
@@ -10,7 +10,7 @@
 
 <!--BODY---------------------------------------------------------------------------------------------------->
 <body>
-    <div class="Card-Wrapper">
+    <div class="widget-wrapper">
         <div class="Search-Wrapper">
             <input type="text" class="City-InputField" placeholder="enter city name" spellcheck="false">
             <button class="Search-Button"><image class="Search-Icon" src="images/search.png"></button>
@@ -44,7 +44,7 @@
                 </div>
             </div> <!--Details-Wrapper END-->
         </div>
-    </div> <!--Card-Wrapper END-->
+    </div> <!--widget-wrapper END-->
 
 
 <!--SCRIPT---------------------------------------------------------------------------------------------------->
