created basic color structure, refactor doDoList widget

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 			</div>
 
 			<div class="content-wrapper">
-				<div class="InputWrapper">
-					<input type="text" class="InputBox" id="TaskInput" placeholder="Write the note text">
-					<button onclick="AddTask()" class="AddButton">Add</button>
+				<div class="task-input-wrapper">
+					<input type="text" class="input-std" id="id-task-input" placeholder="Write the note text">
+					<button onclick="AddTask()" class="btn-std">Add</button>
 				</div>
-				<div class="ListWrapper">
-					<ul class="ListWrapper" id="ListContainer">
+				<div class="list-wrapper">
+					<ul class="list-wrapper" id="id-list-wrapper">
 						<!-- <li class="Checked">Task 1</li>
 						<li>Task 2</li>
 						<li>Task 3</li> -->
