--- a/widgets/toDoList-index.html
+++ b/widgets/toDoList-index.html
@@ -17,12 +17,12 @@
                 </div>
 <!--Input------------------------------------------------------------------------->
                 <div class="InputWrapper">
-                    <input type="text" class="InputBox" id="TaskInput" placeholder="Write the note text">
+                    <input type="text" class="InputBox" id="task-input" placeholder="Write the note text">
                     <button onclick="AddTask()" class="AddButton">Add</button>
                 </div>
 <!--Task List---------------------------------------------------------------------->
-                <div class="ListWrapper">
-                    <ul class="ListWrapper" id="ListContainer">
+                <div class="list-wrapper">
+                    <ul class="list-wrapper" id="list-wrapper">
                         <!-- <li class="Checked">Task 1</li>
                         <li>Task 2</li>
                         <li>Task 3</li> -->
