updated querySelector with getElementById in weather widget

--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
 				</div>
 				
 				<!---->
-				<div class="ErrorMessage-Wrapper">
+				<div class="error-wrapper" id="id-weather-error">
 					<p class="ErrorMessage-Paragraph">invalid city name</p>
 				</div>
 				<!---->
-				<div class="WeatherInfo-Wrapper">
+				<div class="weather-info-wrapper" id="id-weather-info">
 					<img class="weather-icon" id="id-weather-icon" src="images/rain.png">
-					<h1 class="Temperature-H1">22°C</h1>
-					<h2 class="City-H2">New York</h2>
+					<h1 class="Temperature-H1" id="id-tempreature-value">22°C</h1>
+					<h2 class="City-H2" id="id-city">New York</h2>
 					<div class="Details-Wrapper">
 						<div class="DataColumn">
 							<img class="Humidity-Image" src="images/humidity.png">
 							<div>
 								<p class="Humidity-Label"> HUMIDITY </p>
-								<p class="Humidity-Value">50%</p>
+								<p class="Humidity-Value" id="id-humidity-value">50%</p>
 							</div>
 						</div>
 						<div class="DataColumn">
 							<img class="Wind-Image" src="images/wind.png">
 							<div>
 								<p class="Wind-Label"> WIND </p>
-								<p class="Wind-Value">15</p>
+								<p class="Wind-Value" id="id-wind-value">15</p>
 							</div>
 						</div>
 					</div>
