updated weather icons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 
 	<link rel="stylesheet" href="css/cross-style.css">
 	</link>
+	<link rel="stylesheet" href="css/global-variables.css">
+	</link>
+	<link rel="stylesheet" href="css/prefab.css">
+	</link>
 	<link rel="stylesheet" href="css/quiz-style.css">
 	</link>
 	<link rel="stylesheet" href="css/toDoList-style.css">
 	</link>
 	<link rel="stylesheet" href="css/weather-style.css">
-	</link>
-	<link rel="stylesheet" href="css/global-variables.css">
 	</link>
 	<title>Document</title>
 </head>
@@ -41,13 +43,13 @@
 					</button>
 				</div>
 				
-				<!---->
+
 				<div class="error-wrapper" id="id-weather-error">
-					<p class="ErrorMessage-Paragraph">invalid city name</p>
+					<p class="error-message">invalid city name</p>
 				</div>
-				<!---->
+
 				<div class="weather-info-wrapper" id="id-weather-info">
-					<img class="weather-icon" id="id-weather-icon" src="images/rain.png">
+					<img class="weather-icon" id="id-weather-icon">
 					<h1 class="Temperature-H1" id="id-tempreature-value">22°C</h1>
 					<h2 class="City-H2" id="id-city">New York</h2>
 					<div class="Details-Wrapper">
@@ -136,6 +138,8 @@
 	
 			</div>
 		</div>
+
+		
 
 	</div>
 
