--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 						<div class="left-weather-split"> <!-- LEFT SPLIT -->
 							<img class="weather-icon" id="id-weather-icon">
-							<h2 class="City-H2" id="id-city">New York</h2>
+							<h2 class="weather-city" id="id-city">New York</h2>
 						</div>
 
 						<div class="right-weather-split"> <!-- RIGHT SPLIT -->
