refactored question counter with automatic logics

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 					<h2> Quiz </h2>
 				</div>
 				<div class="content-wrapper">
-					<h2 id="question-id">Question goes here</h2>
+					<p class="question-progression" id="id-question-progression"></p>
+					<p class="question-text" id="question-id"> Question goes here </p>
 					<div class="buttons-wrapper" id="answer-wrapper-id">
 						<button class="standard-button">Answer 1</button>
 						<button class="standard-button">Answer 2</button>
