refactor quiz widget footer layout

--- a/index.html
+++ b/index.html
@@ -117,15 +117,21 @@
 					<h2> Quiz </h2>
 				</div>
 				<div class="content-wrapper">
-					<p class="question-progression" id="id-question-progression"></p>
-					<p class="question-text" id="question-id"> Question goes here </p>
-					<div class="buttons-wrapper" id="answer-wrapper-id">
-						<button class="standard-button">Answer 1</button>
-						<button class="standard-button">Answer 2</button>
-						<button class="standard-button">Answer 3</button>
-						<button class="standard-button">Answer 4</button>
+					<div class="quiz-content-wrapper">
+						<div class="question-wrapper">
+							<p class="question-text" id="question-id"> Question goes here </p>
+							<div class="answers-wrapper" id="answers-wrapper-id">
+								<button class="standard-button">Answer 1</button>
+								<button class="standard-button">Answer 2</button>
+								<button class="standard-button">Answer 3</button>
+								<button class="standard-button">Answer 4</button>
+							</div>
+						</div>
+						<div class="quiz-footer">
+							<p class="question-progression" id="id-question-progression"></p>
+							<button class="btn-std" id="next-button-id">Next</button>
+						</div>
 					</div>
-					<button class="standard-button" id="next-button-id">Next</button>
 				</div>
 			</div>
 			<!------------------------------>
