--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 				<div class="content-wrapper">
 					<div class="quiz-content-wrapper">
 						<div class="question-wrapper">
+							<p class="final-score" id="id-final-score"></p>
 							<p class="question-text" id="question-id"> Question goes here </p>
 							<div class="answers-wrapper" id="answers-wrapper-id">
 								<button class="standard-button">Answer 1</button>
