created password-generator basic structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	</link>
 	<link rel="stylesheet" href="css/weather-style.css">
 	</link>
+	<link rel="stylesheet" href="css/passwordGenerator.css">
+	<link>
+	</head>
 	<title>Document</title>
 </head>
 
@@ -138,13 +141,17 @@
 			<!------------------------------>
 			<!---------- PASSWORD ---------->
 			<!------------------------------>
-			<div class="main-container">
-				<div class="main-wrapper">
-					<h1 class="widget-title"> Rnadom password generator</h1>
+			<div class="widget-wrapper">
+				<div class="heading-wrapper">
+					<h2>Password generator</h2>	
+				</div>
+				<div class="content-wrapper">
 					<div class="generator-wrapper">
-						<input type="text" class="std-type-field" id="password-output"
-							placeholder="Password will appera right here">
-						<text class="text-button"> copy </text>
+						<div class="input-wrapper">
+							<input type="text" class="input-std" id="password-output"
+								placeholder="Password will appear right here">
+							<text class="btn-underlined generator-copy-btn"> copy </text>
+						</div>
 					</div>
 
 				</div>
