defined password generator widget basic logic and fix btn-underline style

--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
 				<div class="content-wrapper">
 					<div class="generator-wrapper">
 						<div class="input-wrapper">
-							<input type="text" class="input-std" id="password-output"
+							<input type="text" class="input-std" id="id-password-input"
 								placeholder="Password will appear right here">
-							<text class="btn-underlined generator-copy-btn"> copy </text>
+							<button class="btn-underlined generator-copy-btn"> copy </button>
 						</div>
+						<button onclick="generatePassword()" class="btn-std"> Generate password </button>
 					</div>
 
 				</div>
@@ -163,6 +164,7 @@
 	<script src="scripts/quiz-script.js"></script>
 	<script src="scripts/toDoList-script.js"></script>
 	<script src="scripts/weather-script.js"></script>
+	<script src="scripts/passwordGenerator-script.js"></script>
 
 
 
