added copy password function and cleared specific styles as not needed

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<div class="input-wrapper">
 							<input type="text" class="input-std" id="id-password-input"
 								placeholder="Password will appear right here">
-							<button class="btn-underlined generator-copy-btn"> copy </button>
+							<button onclick="copyPassword()" class="btn-underlined"> copy </button>
 						</div>
 						<button onclick="generatePassword()" class="btn-std"> Generate password </button>
 					</div>
