created calculator files, basic strcutre and style

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	</link>
 	<link rel="stylesheet" href="css/passwordGenerator.css">
 	<link>
+	<link rel="stylesheet" href="css/calculator-style.css">
+	<link>
 	</head>
 	<title>Document</title>
 </head>
@@ -129,6 +131,7 @@
 								<button class="standard-button">Answer 2</button>
 								<button class="standard-button">Answer 3</button>
 								<button class="standard-button">Answer 4</button>
+								
 							</div>
 						</div>
 						<div class="quiz-footer">
@@ -153,6 +156,43 @@
 							<button onclick="copyPassword()" class="btn-underlined"> copy </button>
 						</div>
 						<button onclick="generatePassword()" class="btn-std"> Generate password </button>
+					</div>
+
+				</div>
+			</div>
+			<!-------------------------------->
+			<!---------- CALCULATOR ---------->
+			<!-------------------------------->
+			<div class="widget-wrapper">
+				<div class="heading-wrapper">
+					<h2>Calculator</h2>	
+				</div>
+				<div class="content-wrapper">
+					<div class="calculator-wrapper">
+						<div class="input-wrapper">
+							<input type="text" class="input-std" id="id-pcalculator-ouput">
+						</div>
+						<div class="calculator-btn-grid">
+							<input class="btn-border" type="button" value="AC">
+							<input class="btn-border" type="button" value="DE">
+							<input class="btn-border" type="button" value=".">
+							<input class="btn-border" type="button" value="/">
+							<input class="btn-border" type="button" value="7">
+							<input class="btn-border" type="button" value="8">
+							<input class="btn-border" type="button" value="9">
+							<input class="btn-border" type="button" value="*">
+							<input class="btn-border" type="button" value="4">
+							<input class="btn-border" type="button" value="5">
+							<input class="btn-border" type="button" value="6">
+							<input class="btn-border" type="button" value="-">
+							<input class="btn-border" type="button" value="1">
+							<input class="btn-border" type="button" value="2">
+							<input class="btn-border" type="button" value="3">
+							<input class="btn-border" type="button" value="+">
+							<input class="btn-border" type="button" value="00">
+							<input class="btn-border" type="button" value="0">
+							<input class="btn-std" type="button" style="grid-column: 3/5; grid-row: 5/6"value="=">
+						</div>
 					</div>
 
 				</div>
