refined calculator style

--- a/index.html
+++ b/index.html
@@ -170,27 +170,27 @@
 				<div class="content-wrapper">
 					<div class="calculator-wrapper">
 						<div class="input-wrapper">
-							<input type="text" class="input-std" id="id-pcalculator-ouput">
+							<input type="text" class="calculator-input" id="id-pcalculator-ouput" value="123456">
 						</div>
 						<div class="calculator-btn-grid">
-							<input class="btn-border" type="button" value="AC">
-							<input class="btn-border" type="button" value="DE">
-							<input class="btn-border" type="button" value=".">
-							<input class="btn-border" type="button" value="/">
-							<input class="btn-border" type="button" value="7">
-							<input class="btn-border" type="button" value="8">
-							<input class="btn-border" type="button" value="9">
-							<input class="btn-border" type="button" value="*">
-							<input class="btn-border" type="button" value="4">
-							<input class="btn-border" type="button" value="5">
-							<input class="btn-border" type="button" value="6">
-							<input class="btn-border" type="button" value="-">
-							<input class="btn-border" type="button" value="1">
-							<input class="btn-border" type="button" value="2">
-							<input class="btn-border" type="button" value="3">
-							<input class="btn-border" type="button" value="+">
-							<input class="btn-border" type="button" value="00">
-							<input class="btn-border" type="button" value="0">
+							<input class="btn-dark" type="button" value="AC">
+							<input class="btn-dark" type="button" value="DE">
+							<input class="btn-dark" type="button" value=".">
+							<input class="btn-dark" type="button" value="/">
+							<input class="btn-dark" type="button" value="7">
+							<input class="btn-dark" type="button" value="8">
+							<input class="btn-dark" type="button" value="9">
+							<input class="btn-dark" type="button" value="*">
+							<input class="btn-dark" type="button" value="4">
+							<input class="btn-dark" type="button" value="5">
+							<input class="btn-dark" type="button" value="6">
+							<input class="btn-dark" type="button" value="-">
+							<input class="btn-dark" type="button" value="1">
+							<input class="btn-dark" type="button" value="2">
+							<input class="btn-dark" type="button" value="3">
+							<input class="btn-dark" type="button" value="+">
+							<input class="btn-dark" type="button" value="00">
+							<input class="btn-dark" type="button" value="0">
 							<input class="btn-std" type="button" style="grid-column: 3/5; grid-row: 5/6"value="=">
 						</div>
 					</div>
